--- a/d-flex.css
+++ b/d-flex.css
@@ -1,8 +1,8 @@
 /*
-    v1.0
+    Version: 1.0
     Description: Inspired by Bootstrap
+    Github: https://github.com/zoukidev/d-flex/
 */
-
 .d-flex {display: flex !important;}
 
 .flex-row { flex-direction: row !important; }
@@ -15,14 +15,11 @@
 .flex-fill { flex: 1 1 auto !important; }
 .flex-grow-0 { flex-grow: 0 !important; }
 .flex-grow-1 { flex-grow: 1 !important; }
-.flex-grow-2 { flex-grow: 2 !important; }
-.flex-grow-3 { flex-grow: 3 !important; }
 .flex-shrink-0 { flex-shrink: 0 !important; }
 .flex-shrink-1 { flex-shrink: 1 !important; }
-.flex-shrink-2 { flex-shrink: 2 !important; }
 .flex-basis-auto { flex-basis: auto !important; }
-
 .flex-basis-0 { flex-basis: 0 !important; }
+
 .justify-content-start { justify-content: flex-start !important; }
 .justify-content-end { justify-content: flex-end !important; }
 .justify-content-center { justify-content: center !important; }
